--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dev": "vue-cli-service serve"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.1-alpha.19",
+    "modern-css-reset": "^1.4.0",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
